overlays/openshift/servicemesh/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secure-kubeflow
spec:
  host: kubeflow.CLUSTER_DOMAIN_PLACEHOLDER
  port:
    targetPort: 9443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: istio-ingressgateway
